--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -184,6 +184,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 /* Header Section */
 .intro {
 	display: table;
+	margin-top: 80px;
 	width: 100%;
 	padding: 0;
 	background: url(../img/intro-bg.jpg) center center no-repeat;
