added Carousel  and react build

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.carousel-container-custom {
+  width: 100%;
+}
+
+.service-custom {
+  margin-bottom: -100px;
+}
